--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,5 @@
-REACT_APP_CANDY_MACHINE_ID=CJwm5kPeTpV3PzNyAyAqb8FH9P7uLx8oDxWQ9kdARwXt
+REACT_APP_CANDY_MACHINE_ID=nuWkThyPK2fWbFb1qeVxK7AP6sFjdNjvwPGz286s8hV
+CI=false
 
 REACT_APP_SOLANA_NETWORK=mainnet-beta
 REACT_APP_SOLANA_RPC_HOST=https://api.mainnet-beta.solana.com
